[gd_scene load_steps=8 format=2]

[ext_resource path="res://crypt/cripta.png" type="Texture" id=1]
[ext_resource path="res://crypt/Crypt.gd" type="Script" id=2]
[ext_resource path="res://crypt/Gate_Open_00.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "open"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[node name="Crypt" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Frame" type="Sprite" parent="."]
position = Vector2( 97.6, -56 )
texture = ExtResource( 1 )
hframes = 5

[node name="Door" type="Sprite" parent="."]
position = Vector2( 97.6, -56 )
z_index = -1
texture = ExtResource( 1 )
hframes = 5
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Door"]
anims/open = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 96, 96 )
shape = SubResource( 2 )

[node name="GateOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PoolVector2Array( 0, 32, 16, 32, 16, 48, 32, 48, 32, 64, 64, 64, 64, 0, 128, 0, 128, 64, 160, 64, 160, 48, 176, 48, 176, 32, 192, 32, 192, -32, 0, -32 )

[node name="Entrance" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance"]
position = Vector2( 96, 32 )
shape = SubResource( 3 )

[node name="DoorCollision" type="CollisionShape2D" parent="."]
position = Vector2( 96, 32 )
shape = SubResource( 4 )
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_entered" from="Entrance" to="." method="_on_Entrance_area_shape_entered"]
